assignments/totes-app/deployment/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: totes-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: totes-backend
  template:
    metadata:
      labels:
        app: totes-backend
    spec:
      containers:
        - name: backend
          image: asliadarsh/todo-backend:53bf8b8934c238f3fef2eb54f1221e1b9adee24e
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: totes-backend
